--- a/qr-code-component-main/index.css
+++ b/qr-code-component-main/index.css
@@ -4,13 +4,14 @@
     padding: 0;
     font-family: "Outfit", sans-serif;
     color: hsl(218, 44%, 22%);
+    font-size: 62.5%; 
   }
   .attribution { font-size: 11px; text-align: center; }
   .attribution a { color: hsl(228, 45%, 44%); }
 
   body {
     background-color:  hsl(212, 45%, 89%);
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,43 +21,43 @@
   #card{
     background-color: white;
     width: 290px;
-    border-radius: 15px;
-    padding: 15px 0;
-
+    border-radius: 1.5rem;
+    padding: 1.5rem 0;
+    
   }
   
   #card img{
     display: block;
     margin: 0 auto;
-    width: 260px;
-    border-radius: 10px;
+    width: 26rem;
+    border-radius: 1rem;
   }
-  h2{
-    padding-top: 15px;
+  h1{
     font-weight: 700;
-    font-size: 19px;
-    padding-left:20px;
-    padding-right: 20px;
-    
+    font-size: 1.9rem;
   }
   #card p{
-    font-size: 15px;
     font-weight: 400;
-    padding: 20px 26px;
     color: hsl(220, 15%, 55%);
+    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
   }
 
-  h2, #card p{
+  h1, #card p{
     text-align: center;
+    margin-top: 1.5rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
   }
 
   .attribution{
-    padding: 10px;
-    
+    padding: 1rem;
+    font-size: 1.5rem;
   }
 
   .attribution a{
     text-decoration: none;
+    font-size: 1rem;
     color: hsl(218, 44%, 22%);
   }
 
